# mock-vt1-vt2

./: =2.0.0  Makefile  README.md  README_VT_PIPELINE.md  example_usage.py  generate_cycling_data.py  generate_cycling_data_with_gender.py  pyproject.toml  requirements.txt  run_pipeline.py
.cursor/rules/: cache-long-steps.mdc  dag-tooling.mdc  data-location.mdc  data-structure.mdc  env-reproducible.mdc  experiment-log.mdc  no-big-commits.mdc  notebook-code-split.mdc  project-objective.mdc  raw-immutable.mdc  refactor-notebook-code.mdc  secret-safe.mdc
config/: README.md  dataset.yaml  droplist.yaml  models.yaml  pipeline_config.yaml  project.yaml  splits.yaml  summarization.yaml
data/: augmentation.py
docs/: mkdocs.yml
docs/docs/: index.md
mock_vt1_vt2/: __init__.py  config.py  data_augmentation.py  dataset.py  evaluation.py  feature_engineering.py  features.py  model_trainer.py  pipeline.py  plots.py  preprocessing.py  process.py  selection.py  timeseries_summarization.py  train.py
mock_vt1_vt2/data/: config.py  implementations.py  pipeline.py  protocols.py
mock_vt1_vt2/legacy/: __init__.py  c_process_array.py
mock_vt1_vt2/modeling/: __init__.py  predict.py  train.py
mock_vt1_vt2/process/: c_process_array.py  combined.py  config.py  pipeline.py  protocols.py  stages.py
mock_vt1_vt2/utils/: general.py  mlflow_logging.py  plots.py
