[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mock_vt1_vt2"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Giovani Zanfra Brand\u00e3o" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["mock_vt1_vt2"]
include = ["pyproject.toml", "mock_vt1_vt2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mock_vt1_vt2"]
force-sort-within-sections = true

